# palpiteiros-bolao

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: CLAUDE.md
.claude/rules/: bugfixing.md  code-change-scope.md  planning.md  verification.md
.claude/skills/bugfix-workflow/: SKILL.md
.claude/skills/change-review/: SKILL.md
.claude/skills/implementation-plan/: SKILL.md
.claude/skills/seed-next-phase/: SKILL.md
.claude/tasks/: plan-navigation.md  plan-whats-new.md  todo.md
apps/api/: pyproject.toml  requirements.txt
apps/api/api/: index.py
apps/api/app/: config.py  db.py  deps.py  limiter.py  main.py  schemas.py  security.py  seed.py  serializers.py
apps/api/app/models/: __init__.py
apps/api/app/routers/: admin.py  auth.py  matches.py  news.py  pools.py  predictions.py
apps/api/app/services/: access.py  email.py  leaderboard.py  live_scores.py  llm.py  narrative.py  news.py  scoring.py
apps/api/data/: wc2026_schedule.bak.json  wc2026_schedule.json
apps/api/scripts/: devdata.py
apps/api/tests/: test_narrative.py  test_news.py  test_scoring.py
apps/web/: .env.local.example  next.config.mjs  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  robots.ts
apps/web/components/: BottomNav.tsx  (+6 more)
docs/: architecture.md  data-model.md  deploy.md  fixtures.md  integrations.md  scoring.md
tasks/: plan-advancing-team-ui.md  plan-draw-margin-tier.md  plan-narrative.md  plan-option-a-weights.md  plan-penalty-predictions.md  plan-wrong-outcome-margin.md
(+24 files in other folders)
