[project]
name = "bolao-api"
version = "0.1.0"
description = "Bolão World Cup 2026 — FastAPI + Beanie backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "beanie>=2.0",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2",
    "certifi>=2024.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "anthropic>=0.40",
    "truststore>=0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mongomock-motor>=0.0.34",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv]
package = false
